--- a/package.json
+++ b/package.json
@@ -2,26 +2,34 @@
   "name": "nodejs-typescript-mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "tsc && nodemon ./app/index.ts"
+    "dev": "dotenv -e .env.development -- nodemon ./app/index.ts",
+    "test": "dotenv -e .env.test && jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "mongoose": "^5.13.13",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@faker-js/faker": "^7.6.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^16.11.9",
-    "nodemon": "^2.0.15"
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.1.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
