--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "dotenv -e .env.development -- nodemon ./app/index.ts",
-    "test": "dotenv -e .env.test && jest"
+    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test:coverage": "dotenv -e .env.test -- jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +16,10 @@
     "dotenv-cli": "^7.2.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -26,8 +29,11 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.0",
+    "@types/rosie": "^0.0.42",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "rosie": "^2.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
